--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ backend/error.log
 backend/poetry.lock
 backend/test.txt
 
+frontend/.env
 frontend/dist
 frontend/dev/assets/vendor
 frontend/node_modules
